# kubernetes-metrics-server-operator

./: .gitignore  .jujuignore  CONTRIBUTING.md  README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tests.yaml
src/: charm.py  manifests.py  metric_server_manifests.py
tests/integration/: conftest.py  test_kubernetes_metrics_server.py
tests/integration/integration/: conftest.py  test_kubernetes_autoscaler.py
tests/unit/: conftest.py  test_charm.py  test_metric_server_manifests.py
upstream/: README.md  update  update.py
