[project]
name = "kubernetes-metrics-server"
version = "0.0.0"
description = "Kubernetes Metrics Server for Kubernetes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ops",
    "lightkube>=0.10.1,<1.0.0",
    "pyyaml"
]

[dependency-groups]
unit = [
    "coverage[toml]>=7.6.1",
    "pytest>=8.3.4",
    "pytest-sugar"
]

[tool.mypy]
